@@ -4,13 +4,10 @@ import lombok.Getter;
 import org.modelmapper.Conditions;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.convention.MatchingStrategies;
-import org.modelmapper.internal.util.Assert;
-import org.springframework.context.annotation.Bean;
 import org.springframework.data.domain.Page;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 public class ObjectMapperUtils {
@@ -31,7 +28,7 @@ public class ObjectMapperUtils {
     public <D, T> List<D> mapAll(final Collection<T> entityList, Class<D> outCLass) {
         return entityList.stream()
                 .map(entity -> map(entity, outCLass))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public <D, T> Page<D> mapEntityPageIntoDtoPage(Page<T> entities, Class<D> outCLass) {
